# ngxav-rs

./: .gitignore  Cargo.toml  README.md  obfuscate_access_logs
.github/workflows/: main.yml  run-tests.yml
src/: main.rs  structs.rs
src/assets/: regexes.yaml
src/structs/: AnalyticsResult.rs  ArgParser.rs  Args.rs  LineParseResult.rs  UserAgentParseResult.rs  mod.rs
src/utils/: generate_analytics.rs  keep_line.rs  mod.rs  parse_input_time.rs  parse_line.rs  parse_nginx_time_format.rs  parse_user_agent.rs  read_folder.rs  read_folder_conserve_memory.rs  session_analytics.rs  session_unique.rs  sessionize.rs  sessions_from_ip.rs  sort_by_body_size.rs  sort_by_date.rs  unique_ips_only.rs
tests/: Cargo.toml  test_cases.toml
tests/obfuscate_access_log_ips/: Cargo.toml  main.rs
tests/obfuscate_access_log_ips/src/: main.rs
tests/scripts/: flame.sh  mem_check.sh
tests/src/: main.rs
