[package]
name = "ngxav"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Search through NGINX logs with advanced filters and support for displaying analytics about your selected log entries"
readme = "README.md"
repository = "https://github.com/qpxdesign/ngxav-rs/"

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
rayon = "1.8.1"
regex = "1.10.3"