[package]
name = "ngxav"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Search through NGINX logs with advanced filters and support for displaying analytics about your selected log entries"
readme = "README.md"
repository = "https://github.com/qpxdesign/ngxav-rs/"

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8.1"
regex = "1.10.3"
