workspace = { members = [ "tests","tests/obfuscate_access_log_ips"] }
[package]
name = "ngxav"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Search through NGINX logs with advanced filters and support for displaying analytics about your selected log entries"
readme = "README.md"
repository = "https://github.com/qpxdesign/ngxav-rs/"

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
isbot = "0.1.3"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.8.1"
regex = "1.10.3"
shlex = "1.3.0"
woothee = "0.13.0"
