[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.1.0"
colored = "2.1.0"
colorize = "0.1.0"
md5 = "0.7.0"
serde = "1.0.196"
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
